--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -32,4 +32,5 @@ resources.db.params.host = "localhost"
 resources.db.params.username = "root"
 resources.db.params.password = "ch0r1c1t0"
 resources.db.params.dbname = "borrar"
+resources.db.params.nada = "borrar"
 
