--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -26,3 +26,6 @@ phpSettings.display_errors = 1
 resources.frontController.params.displayExceptions = 1
 resources.db.adapter = "PDO_SQLITE"
 resources.db.params.dbname = APPLICATION_PATH "/../data/db/guestbook-dev.db"
+
+[diego : development]
+
