--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -30,3 +30,8 @@ resources.db.params.dbname = APPLICATION_PATH "/../data/db/guestbook-dev.db"
 [diego : development]
 
 [Perico : development]
+resources.db.adapter = "pdo_mysql"
+resources.db.params.host = "localhost"
+resources.db.params.username = "root"
+resources.db.params.password = "ch0r1c1t0"
+resources.db.params.dbname = "borrar"
